--- a/templates/agenda/event_list.html
+++ b/templates/agenda/event_list.html
@@ -1,7 +1,7 @@
 <h1>Événements</h1>
 <ul>
     {% for event in object_list %}
-        <li>{{ event.title }}, le {{ event.date }} à {{ event.place }}- {{ event.description }}</li>
+        <li>{{ event.title }}, le {{ event.date }} à {{ event.place }}- {{ event.description }} - <a href="{% url 'event-delete' pk=event.id %}">Supprimer</a> </li>
     {% empty %}
         <li>Pas d'événement pour le moment !</li>
     {% endfor %}
