--- a/templates/base.html
+++ b/templates/base.html
@@ -2,13 +2,25 @@
 
 <!DOCTYPE html>
 <head>
-	
 	<meta charset="utf-8">
 	<title>Association Art'Sign</title>
 
+	<link rel="stylesheet" type="text/css" href={% static 'css/style.css' %}/>
 </head>
 
 <body>
+
+<div id="header">
+		<div class="menu">
+			<ul>
+				<li><a href="#">Qui sommes-nous ?</a></li>
+				<li><a href="#">Nos réalisations</a></li>
+				<li><a href="#">Nos services</a></li>
+				<li><a href="#">Sorties possibles grâce à Art'Sign</a></li>
+				<li><a href="#">Participez !</a></li>
+			</ul>	
+		</div>
+	</div>
 
 
 	{% block content %}
