Nouvelle URL GitHub

--- a/templates/rest_framework_docs/docs.html
+++ b/templates/rest_framework_docs/docs.html
@@ -17,7 +17,7 @@
 <div class ="footer">
     <div class="links">
         <a href="https://artsign.blogsport.fr"><i class="fa fa-link"></i></a>
-        <a href="https://github.com/Emeric54/Art-Sign"><i class="fa fa-github"></i></a>
+        <a href="https://github.com/Art-Sign"><i class="fa fa-github"></i></a>
     </div>
 </div>
 {% endblock %}
