Afficher les évenements à venir sur la home

--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -1,3 +1,13 @@
 <h1>Art'Sign</h1>
 <a href="{% url 'event-list' %}">Agenda</a>
 <a href="{% url 'article-list' %}">Billets</a>
+
+
+<h2>Prochainement...</h2>
+<ul>
+    {% for event in next_events %}
+        <li><a href="{% url 'event-detail' pk=event.pk %}">{{ event.title }}</a>, le {{ event.date }} à {{ event.place }}- {{ event.description }}</li>
+    {% empty %}
+        <li>Pas d'événement à venir pour le moment !</li>
+    {% endfor %}
+</ul>
