--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -11,3 +11,12 @@
         <li>Pas d'événement à venir pour le moment !</li>
     {% endfor %}
 </ul>
+
+<h2>Derniers billets</h2>
+<ul>
+    {% for article in last_articles %}
+        <li><a href="{% url 'article-detail' pk=article.pk %}">{{ article.title }}</a></li>
+    {% empty %}
+        <li>Pas d'article pour le moment !</li>
+    {% endfor %}
+</ul>
