--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -1,3 +1,9 @@
+{% extends 'base.html' %}
+
+
+{% block content %}
+
+
 <h1>Art'Sign</h1>
 <a href="{% url 'event-list' %}">Agenda</a>
 <a href="{% url 'article-list' %}">Billets</a>
@@ -20,3 +26,6 @@
         <li>Pas d'article pour le moment !</li>
     {% endfor %}
 </ul>
+
+
+{% endblock content %}
