--- a/templates/agenda/event_detail.html
+++ b/templates/agenda/event_detail.html
@@ -1,3 +1,11 @@
+{% extends 'base.html' %}
+
+
+{% block content %}
+
 <h1>{{ event.title }}</h1>
 <h2>{{ event.description }}</h2>
 <p>À {{ event.place }}, le {{ event.date }}.</p>
+
+
+{% endblock content %}
