--- a/templates/article/article_detail.html
+++ b/templates/article/article_detail.html
@@ -1,5 +1,14 @@
+{% extends 'base.html' %}
+
+
+{% block content %}
+
+
 <h1>{{ article.title }}</h1>
 {% if article.pub_date %}
     <h2>Publié le {{ article.pub_date }}</h2>
 {% endif %}
 {% autoescape off %}{{ article.content }}{% endautoescape %}
+
+
+{% endblock content %}
