Add favicon link

--- a/templates/base.html
+++ b/templates/base.html
@@ -5,6 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Art'Sign</title>
+    <link rel="icon" type="images/jpeg" href="{% static 'img/logo.jpg' %}"/>
 </head>
 <body>
 
