--- a/templates/base.html
+++ b/templates/base.html
@@ -6,6 +6,7 @@
     <meta charset="UTF-8">
     <title>Art'Sign</title>
     <link rel="icon" type="images/jpeg" href="{% static 'img/logo.jpg' %}"/>
+    <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}"/>
 </head>
 <body>
 
