Ajout de la page about

--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -5,6 +5,7 @@
 
 
 <h1>Art'Sign</h1>
+<a href="{% url 'about' %}">Qui sommes-nous ?</a>
 <a href="{% url 'event-list' %}">Agenda</a>
 <a href="{% url 'article-list' %}">Billets</a>
 
