--- a/templates/pages/about.html
+++ b/templates/pages/about.html
@@ -3,11 +3,25 @@
 
 {% block content %}
 
+<div id="container-about">
+    <h1>Qui sommes-nous ?</h1>
+    <div class="row">
+        
+    </div>
+    <p class="content">
+    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis scelerisque diam at massa semper facilisis. Sed pulvinar id mauris at facilisis. Phasellus scelerisque nisi ac iaculis malesuada. Donec luctus faucibus velit. Vivamus rhoncus eros aliquet eros pharetra, vel scelerisque sem dapibus. Duis molestie malesuada nisi, at iaculis massa scelerisque a. Vivamus feugiat sagittis odio, sit amet efficitur mauris auctor id. Suspendisse sed elit ante. Mauris lacus leo, fringilla ac cursus nec, gravida at ipsum. Duis quis justo vitae nulla imperdiet iaculis ac eget sem. Aliquam finibus sapien sed nisl efficitur sagittis. Aenean sed libero ante. Phasellus sed tellus molestie, rutrum velit eget, semper diam. Aliquam feugiat, nibh nec ornare varius, felis purus gravida eros, eu rhoncus tellus quam eu dolor. Nulla egestas finibus metus nec cursus.
+    </p>
 
-<h1>Qui sommes-nous ?</h1>
+    <h2>L'association</h2>
+    <p class="content">
+    Nulla tempus, purus et accumsan finibus, sapien justo congue tortor, nec placerat erat felis eu ipsum. Donec sagittis elit ipsum, nec feugiat augue vestibulum nec. Etiam nibh turpis, interdum sollicitudin facilisis vitae, commodo et metus. Curabitur bibendum finibus lacus, at imperdiet mauris lobortis sit amet. Nunc malesuada massa ex, at interdum arcu placerat a. Morbi ligula est, lobortis ultrices lacus aliquam, tincidunt interdum ipsum. Proin dictum vel lorem quis luctus. Etiam neque libero, maximus ut sapien et, lobortis porta diam. Mauris vitae vehicula augue.
+    </p>
 
-<h2>L'association</h2>
+    <h2>L'Équipe</h2>
+    <p class="content">
+    Aliquam congue volutpat risus, vulputate tristique odio luctus tempor. Pellentesque vel condimentum mauris. Nunc volutpat vehicula ante vitae molestie. Fusce tellus turpis, hendrerit id pellentesque sed, imperdiet id justo. Fusce quam est, facilisis ac diam in, imperdiet mollis turpis. Sed tincidunt libero a nisi porttitor porta. Nulla facilisi. Ut nec ultrices nibh. Cras ligula magna, dictum vitae metus a, iaculis lacinia nulla.
+    </p>
 
-<h2>L'Équipe</h2>
+</div>
 
 {% endblock content %}
