--- a/public/sass/home.css
+++ b/public/sass/home.css
@@ -24,6 +24,18 @@ footer.page-footer li { color: #FFFFFF; }
 
 footer .footer-copyright { background-color: #1976D2; }
 
+footer .partners img { max-width: 50%; max-height: 40px; }
+
+footer .socials { margin-top: 30px; }
+
+footer .socials .social { display: inline-flex; }
+
+footer .socials .social .fa { cursor: pointer; font-size: 30px; margin-right: 15px; }
+
+footer .socials .social .fa.fa-facebook-official { color: #3C5A99; }
+
+footer .socials .social .fa.fa-google-plus-official { color: #DB4437; }
+
 footer h5, footer p, footer a { color: #FFFFFF; }
 
 footer .fa { color: #BBDEFB; }
