--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -32,7 +32,7 @@
             {% endfor %}
         </ul> -->
     </div>
-    <div class="col s12 m6 video-flc">
+    <div class="col s12 m6">
         <div class="video-container">
             <iframe width="853" height="480" src="//www.youtube.com/embed/rz3jw0_XXoc?rel=0" frameborder="0" allowfullscreen></iframe>
         </div>
