--- a/templates/pages/about.html
+++ b/templates/pages/about.html
@@ -5,22 +5,55 @@
 
 <div id="container-about">
     <h1>Qui sommes-nous ?</h1>
-    <div class="row">
-        
-    </div>
-    <p class="content">
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis scelerisque diam at massa semper facilisis. Sed pulvinar id mauris at facilisis. Phasellus scelerisque nisi ac iaculis malesuada. Donec luctus faucibus velit. Vivamus rhoncus eros aliquet eros pharetra, vel scelerisque sem dapibus. Duis molestie malesuada nisi, at iaculis massa scelerisque a. Vivamus feugiat sagittis odio, sit amet efficitur mauris auctor id. Suspendisse sed elit ante. Mauris lacus leo, fringilla ac cursus nec, gravida at ipsum. Duis quis justo vitae nulla imperdiet iaculis ac eget sem. Aliquam finibus sapien sed nisl efficitur sagittis. Aenean sed libero ante. Phasellus sed tellus molestie, rutrum velit eget, semper diam. Aliquam feugiat, nibh nec ornare varius, felis purus gravida eros, eu rhoncus tellus quam eu dolor. Nulla egestas finibus metus nec cursus.
-    </p>
 
     <h2>L'association</h2>
-    <p class="content">
-    Nulla tempus, purus et accumsan finibus, sapien justo congue tortor, nec placerat erat felis eu ipsum. Donec sagittis elit ipsum, nec feugiat augue vestibulum nec. Etiam nibh turpis, interdum sollicitudin facilisis vitae, commodo et metus. Curabitur bibendum finibus lacus, at imperdiet mauris lobortis sit amet. Nunc malesuada massa ex, at interdum arcu placerat a. Morbi ligula est, lobortis ultrices lacus aliquam, tincidunt interdum ipsum. Proin dictum vel lorem quis luctus. Etiam neque libero, maximus ut sapien et, lobortis porta diam. Mauris vitae vehicula augue.
-    </p>
+    <span class="content">
+        Art’Sign est une association de loi 1901, créée en 2006, avec le projet de promouvoir et développer l’action culturelle en direction des sourds. Elle s’inscrit dans la culture de la Langue des Signes Française. L’action de l’association s’inscrit dans un triple objectif :
+        <ol>
+            <li>Favoriser l’accès des sourds à la culture et à l’information en général.</li>
+            <li>Soutenir l’expression artistique en Langue des signes, à la fois comme expression d’une culture spécifique et comme moyen d’accès aux lieux et aux œuvres culturelles.</li>
+            <li>Développer les échanges culturels entre les sourds et entendants, signants ou  non. Favoriser les collaborations professionnelles.</li>
+        </ol>
+    </span>
+    <a class="waves-effect waves-light btn" href="#modalJoinUs">Nous rejoindre</a>
 
     <h2>L'Équipe</h2>
     <p class="content">
     Aliquam congue volutpat risus, vulputate tristique odio luctus tempor. Pellentesque vel condimentum mauris. Nunc volutpat vehicula ante vitae molestie. Fusce tellus turpis, hendrerit id pellentesque sed, imperdiet id justo. Fusce quam est, facilisis ac diam in, imperdiet mollis turpis. Sed tincidunt libero a nisi porttitor porta. Nulla facilisi. Ut nec ultrices nibh. Cras ligula magna, dictum vitae metus a, iaculis lacinia nulla.
     </p>
+    <div class="team-members">
+        <div class="member">
+            <p class="member-function">Président</p>
+            <p class="member-name">David de Filippo</p>
+        </div>
+        <div class="member">
+            <p class="member-function">Trésorière</p>
+            <p class="member-name">Christine Grandin</p>
+        </div>
+        <div class="member">
+            <p class="member-function">Secrétaire</p>
+            <p class="member-name">Laïla Hassani</p>
+        </div>
+        <div class="member">
+            <p class="member-function">Conseillères</p>
+            <p class="member-name">Anne Jeanneau</p>
+            <p class="member-name">Catherine Zlatkovic</p>
+        </div>
+    </div>
+    <a class="waves-effect waves-light btn" href="#modalContactUs">Nous contacter</a>
+
+    <!-- Modal Structure -->
+    <div id="modalContactUs" class="modal bottom-sheet">
+        <div class="modal-content">
+            <h3>Nous contacter</h3>
+            <p>Bureau et Siège Social INJS, 254 rue Saint-Jacques 75005 Paris</p>
+            <p><span class="bold">Courriel: </span>contact@art-sign.org</p>
+            <p><span class="bold">Téléphone: </span>01 53 73 14 63</p>
+        </div>
+        <div class="modal-footer">
+            <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat">Fermer</a>
+        </div>
+    </div>
 
 </div>
 
