--- a/public/sass/home.scss
+++ b/public/sass/home.scss
@@ -21,6 +21,14 @@ body {
     margin-right: 5px;
 }
 
+a {
+    &.btn {
+        &:hover {
+            text-decoration: none;
+        }
+    }
+}
+
 #container-home {
     h1 {
         font-size: 3em;
