--- a/templates/base.html
+++ b/templates/base.html
@@ -88,5 +88,6 @@
     <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.99.0/js/materialize.min.js"></script>
     <script src="https://use.fontawesome.com/7c8fad8fdd.js"></script>
+    <script src="{% static 'js/site.js' %}"></script>
 </body>
 </html>
