--- a/templates/base.html
+++ b/templates/base.html
@@ -19,13 +19,15 @@
             <a href="/" class="brand-logo">
                 <img src="{% static 'img/logoHeader.png' %}" height="65px"/>
             </a>
-            <ul id="nav-mobile" class="right hide-on-med-and-down">
-                <li><a href="{% url 'about' %}">Qui sommes-nous ?</a></li>
-                <li><a href="#">Nos réalisations</a></li>
-                <li><a href="#">Nos services</a></li>
-                <li><a href="#">Participez</a></li>
-                <li><a href="#">Sortez</a></li>
-            </ul>
+            {% with url_name=request.resolver_match.url_name %}
+                <ul id="nav-mobile" class="right hide-on-med-and-down">
+                    <li class=" {% if url_name == 'about' %}active{% endif %}"><a href="{% url 'about' %}">Qui sommes-nous ?</a></li>
+                    <li class=" {% if url_name == 'index' %}active{% endif %}"><a href="#">Nos réalisations</a></li>
+                    <li class=" {% if url_name == 'index' %}active{% endif %}"><a href="#">Nos services</a></li>
+                    <li class=" {% if url_name == 'index' %}active{% endif %}"><a href="#">Participez</a></li>
+                    <li class=" {% if url_name == 'index' %}active{% endif %}"><a href="#">Sortez</a></li>
+                </ul>
+            {% endwith %}
         </div>
     </nav>
 
