Suppression de fichiers inutiles

--- a/public/sass/home.css
+++ b/public/sass/home.css
@@ -74,4 +74,4 @@ a.btn:hover { text-decoration: none; }
 
 #container-home .video-container { margin: 20px 0; }
 
-/*# sourceMappingURL=/public/sass/home.css.map */
+/*# sourceMappingURL=../../../../../../public/sass/home.css.map */
