--- a/templates/base.html
+++ b/templates/base.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.99.0/css/materialize.min.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-    <link href="{% sass_src 'sass/home.scss' %}" rel="stylesheet" type="text/css">
+    <link href="{% sass_src 'sass/main.scss' %}" rel="stylesheet" type="text/css">
 </head>
 <body>
 
@@ -100,5 +100,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.99.0/js/materialize.min.js"></script>
     <script src="https://use.fontawesome.com/7c8fad8fdd.js"></script>
     <script src="{% static 'js/site.js' %}"></script>
+    <script src="{% static 'js/home.js' %}"></script>
 </body>
 </html>
