--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -33,8 +33,21 @@
         </ul> -->
     </div>
     <div class="col s12 m6">
+        <div class="preloader-wrapper small active">
+            <div class="spinner-layer spinner-blue-only">
+                <div class="circle-clipper left">
+                    <div class="circle"></div>
+                </div>
+                <div class="gap-patch">
+                    <div class="circle"></div>
+                </div>
+                <div class="circle-clipper right">
+                    <div class="circle"></div>
+                </div>
+            </div>
+        </div>
         <div class="video-container">
-            <iframe width="853" height="480" src="//www.youtube.com/embed/rz3jw0_XXoc?rel=0" frameborder="0" allowfullscreen></iframe>
+            <iframe width="853" height="480" src="" frameborder="0" allowfullscreen></iframe>
         </div>
     </div>
 </div>
