--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -7,7 +7,7 @@
 
     <div class="col s12 m6">
         <h1>Bienvenue sur notre site!</h1>
-        <p>Retrouver toutes les informations liées à l'assocation</p>
+        <p>Retrouver toutes les informations liées à l'association.</p>
         <!-- <h1>Art'Sign</h1>
         <a href="{% url 'about' %}">Qui sommes-nous ?</a>
         <a href="{% url 'event-list' %}">Agenda</a>
