--- a/public/sass/helpers/_colors.scss
+++ b/public/sass/helpers/_colors.scss
@@ -7,4 +7,6 @@ $primary-text-color:   #212121;
 $secondary-text-color: #757575;
 $divider-color:        #BDBDBD;
 
+$success-color: #4CAF50;
 $danger-color: #D32F2F;
+$warning-color: #FFEB3B;
