--- a/public/sass/main.scss
+++ b/public/sass/main.scss
@@ -5,12 +5,16 @@
 // Componennts
 @import "components/nav";
 @import "components/footer";
+@import "components/input";
+@import "components/button";
 @import "components/cards";
+@import "components/picker";
 
 // Pages
 @import "pages/about";
 @import "pages/articles";
 @import "pages/home";
+@import "pages/participate";
 
 
 body {
