--- a/public/sass/main.scss
+++ b/public/sass/main.scss
@@ -1,6 +1,7 @@
 // Basics
 @import "helpers/colors";
 @import "helpers/text";
+@import "helpers/dimensions";
 
 // Componennts
 @import "components/nav";
@@ -9,6 +10,8 @@
 @import "components/button";
 @import "components/cards";
 @import "components/picker";
+@import "components/toast";
+@import "components/tooltip";
 
 // Pages
 @import "pages/about";
