--- a/public/sass/components/_footer.scss
+++ b/public/sass/components/_footer.scss
@@ -1,6 +1,10 @@
 footer {
     &.page-footer {
         background-color: $primary-color;
+        //padding-left: $side-nav-left-width;
+        &.page-footer-home {
+            padding-left: 0;
+        }
         li {
             color: $primary-color-text;
         }
