--- a/templates/base.html
+++ b/templates/base.html
@@ -13,36 +13,56 @@
 </head>
 <body>
 
-    <nav>
-        <div class="nav-wrapper">
-            <a href="/" class="brand-logo">
-                <img src="{% static 'img/logoHeader.png' %}" height="65px"/>
-            </a>
-            <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="fa fa-bars" aria-hidden="true"></i></a>
-            {% with url_name=request.resolver_match.url_name %}
-                <ul id="nav-mobile" class="right hide-on-med-and-down">
-                    <li class="{% if url_name == 'about' %}active{% endif %}"><a href="{% url 'about' %}">Qui sommes-nous ?</a></li>
-                    <li class="{% if url_name == 'achievements' %}active{% endif %}"><a href="{% url 'achievements' %}">Nos réalisations</a></li>
-                    <li class="{% if url_name == 'services' %}active{% endif %}"><a href="{% url 'services' %}">Nos services</a></li>
-                    <li class="{% if url_name == 'outings' %}active{% endif %}"><a href="{% url 'outings' %}">Sortez</a></li>
-                    <li class="{% if url_name == 'participate' %}active{% endif %}"><a href="{% url 'participate' %}">Participez</a></li>
+    <header>
+        <nav>
+            <div class="nav-wrapper">
+                <div class="logo">
+                    <a href="/" class="brand-logo">
+                        <img src="{% static 'img/logoHeader.png' %}" height="65px"/>
+                    </a>
+                </div>
+                <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="fa fa-bars" aria-hidden="true"></i></a>
+                {% with url_name=request.resolver_match.url_name %}
+                    <ul id="nav-mobile" class="right hide-on-med-and-down">
+                        <li class="{% if url_name == 'about' %}active{% endif %}"><a href="{% url 'about' %}">Qui sommes-nous ?</a></li>
+                        <li class="{% if url_name == 'achievements' %}active{% endif %}"><a href="{% url 'achievements' %}">Nos réalisations</a></li>
+                        <li class="{% if url_name == 'services' %}active{% endif %}"><a href="{% url 'services' %}">Nos services</a></li>
+                        <li class="{% if url_name == 'outings' %}active{% endif %}"><a href="{% url 'outings' %}">Sortez</a></li>
+                        <li class="{% if url_name == 'participate' %}active{% endif %}"><a href="{% url 'participate' %}">Participez</a></li>
+                    </ul>
+                {% endwith %}
+                <!-- for mobile -->
+                <ul class="side-nav" id="mobile-demo">
+                    <li><a href="{% url 'about' %}">Qui sommes-nous ?</a></li>
+                    <li><a href="{% url 'achievements' %}">Nos réalisations</a></li>
+                    <li><a href="{% url 'services' %}">Nos services</a></li>
+                    <li><a href="{% url 'outings' %}">Sortez</a></li>
+                    <li><a href="{% url 'participate' %}">Participez</a></li>
                 </ul>
-            {% endwith %}
-            <!-- for mobile -->
-            <ul class="side-nav" id="mobile-demo">
-                <li><a href="{% url 'about' %}">Qui sommes-nous ?</a></li>
-                <li><a href="#">Nos réalisations</a></li>
-                <li><a href="#">Nos services</a></li>
-                <li><a href="#">Participez</a></li>
-                <li><a href="#">Sortez</a></li>
-            </ul>
-        </div>
-    </nav>
+            </div>
+        </nav>
+    </header>
 
-    <div class="container">
-        {%  block content %}
-        {% endblock %}
-    </div>
+    <aside id="left-sidebar-nav">
+        <ul id="slide-out" class="side-nav fixed leftside-navigation">
+            <li class="item-section">
+                <a href="#" class="tooltipped" data-position="right" data-delay="50" data-tooltip="Accessibilité">A</a>
+            </li>
+            <li class="item-section">
+                <a href="#" class="tooltipped" data-position="right" data-delay="50" data-tooltip="Productions artistiques">PA</a>
+            </li>
+            <li class="item-section">
+                <a href="#" class="tooltipped" data-position="right" data-delay="50" data-tooltip="Evénements">E</a>
+            </li>
+        </ul>
+    </aside>
+
+    <section id="content">
+        <div class="container">
+            {%  block content %}
+            {% endblock %}
+        </div>
+    </section>
 
     <footer class="page-footer">
         <div class="container">
@@ -99,7 +119,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.99.0/js/materialize.min.js"></script>
     <script src="https://use.fontawesome.com/7c8fad8fdd.js"></script>
     <script src="{% static 'js/site.js' %}"></script>
-    <script src="{% static 'js/home.js' %}"></script>
     <script src="{% static 'js/participate.js' %}"></script>
 </body>
 </html>
