Improvement of the page agenda. fix #40

--- a/public/sass/main.scss
+++ b/public/sass/main.scss
@@ -15,7 +15,8 @@
 @import "pages/articles";
 @import "pages/home";
 @import "pages/participate";
-
+@import "pages/events";
+@import "pages/events-details";
 
 body {
     font-family: 'Roboto', sans-serif;
