--- a/templates/agenda/event_list.html
+++ b/templates/agenda/event_list.html
@@ -3,14 +3,38 @@
 
 {% block content %}
 
-<h1>Événements</h1>
-<ul>
-    {% for event in object_list %}
-        <li><a href="{% url 'event-detail' pk=event.pk %}">{{ event.title }}</a>, le {{ event.date }} à {{ event.place }}- {{ event.description }}</li>
-    {% empty %}
-        <li>Pas d'événement pour le moment !</li>
-    {% endfor %}
-</ul>
+<div class="container-event">
+    <h1>Événements</h1>
+    <div class="event-list">
+        {% for event in object_list %}
+        <div class="event row">
+            <div class="event-date-card  col s12 m7">
+                <div class="card-panel col s12 center">
+                    <div class="event-card-date-element">{{ event.date }}</div>
+                </div>
+            </div>
 
+            <div class="event-details col s12 offset-m0 m5">
+                <!--<div class="row">-->
+                    <div class="col s12 m12">
+                        <div class="card">
+                            <div class="card-content">
+                                <span class="card-title">{{ event.title }}</span>
+                                Le {{ event.date }} à {{ event.place }}- {{ event.description }}
+                            </div>
+                            <div class="card-action center">
+                                 <!--TODO: add plus icon here-->+
+                                <a href="{% url 'event-detail' pk=event.pk %}">Plus</a>
+                            </div>
+                        </div>
+                    </div>
+                <!--</div>-->
+            </div>
+        </div>
+        {% empty %}
+        <li>Pas d'événement pour le moment !</li>
+        {% endfor %}
+    </div>
+</div>
 
 {% endblock content %}
