--- a/templates/agenda/event_list.html
+++ b/templates/agenda/event_list.html
@@ -23,7 +23,7 @@
                                 Le {{ event.date }} à {{ event.place }}- {{ event.description }}
                             </div>
                             <div class="card-action center">
-                                 <!--TODO: add plus icon here-->+
+                                 <i class="fa fa-plus"></i>
                                 <a href="{% url 'event-detail' pk=event.pk %}">Plus</a>
                             </div>
                         </div>
