--- a/templates/baseHome.html
+++ b/templates/baseHome.html
@@ -84,9 +84,20 @@
                     <h5><i class="fa fa-calendar" aria-hidden="true"></i>Prochainement...</h5>
                     <ul>
                         {% for event in next_events %}
-                            <li><a class="grey-text text-lighten-3" href="{% url 'event-detail' pk=event.pk %}">{{ event.title }}</a>, le {{ event.date }} à {{ event.place }} - {{ event.description }}</li>
+                            <div class="center card-panel text-lighten-3 footer-next-event">
+                                <a
+                                    class="grey-text text-lighten-3 next-event-link"
+                                    href="{% url 'event-detail' pk=event.pk %}"
+                                    data-date="{{ event.date }}"
+                                >
+                                    {{ event.title }} à {{ event.place }}
+                                </a>
+                            </div>
                         {% empty %}
-                            <li>Pas d'événement à venir pour le moment !&nbsp;<i class="fa fa-frown-o" aria-hidden="true"></i></li>
+                            <div class="footer-next-event center card-panel">
+                                Pas d'événement à venir pour le moment !&nbsp;
+                                <i class="fa fa-frown-o" aria-hidden="true"></i>
+                            </div>
                         {% endfor %}
                     </ul>
                 </div>
@@ -104,5 +115,6 @@
     <script src="https://use.fontawesome.com/7c8fad8fdd.js"></script>
     <script src="{% static 'js/site.js' %}"></script>
     <script src="{% static 'js/participate.js' %}"></script>
+
 </body>
 </html>
