--- a/public/sass/main.scss
+++ b/public/sass/main.scss
@@ -20,6 +20,7 @@
 @import "pages/participate";
 @import "pages/events";
 @import "pages/events-details";
+@import "pages/common";
 
 body {
     font-family: 'Roboto', sans-serif;
